--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- FONT -->
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Libre+Baskerville:wght@700&family=PT+Serif:wght@700&family=Poppins:wght@100;400;900&display=swap" rel="stylesheet">
+
+    <!-- ------------- -->
     <title>CreaVida-SomosICFA</title>
   </head>
   <body>
