--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/MarcaFCV_transparente.png" />
+    <link rel="icon" type="image/svg+xml" href="/MarcaFCV_transparente.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- metaetiqueta de ventana gráfica responsiva a su <head>elemento: -->
@@ -25,9 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora&family=Mate&family=Overpass:wght@100&display=swap"
       rel="stylesheet"
     />
-
-
-
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100&family=Gowun+Batang&family=Oswald:wght@200&display=swap" rel="stylesheet">
     <!-- ------------- -->
     <title>CreaVida-SomosICFA</title>
   </head>
