--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- metaetiqueta de ventana gráfica responsiva a su <head>elemento: -->
-      <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&family=Overpass:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- FONT TITTLE H1 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,8 +22,14 @@
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Italiana&display=swap"
+      rel="stylesheet"
+    />
     <!-- FONT PARRAFO  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +37,10 @@
       href="https://fonts.googleapis.com/css2?family=Lora&family=Mate&family=Overpass:wght@100&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100&family=Gowun+Batang&family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@100&family=Gowun+Batang&family=Oswald:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <!-- ------------- -->
     <title>CreaVida-SomosICFA</title>
   </head>
