--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
     <!-- ------------- -->
-    <title>CreaVida-SomosICFA</title>
+    <title>Fcreavida</title>
   </head>
   <body>
     <div id="root"></div>
